# pytest-depper

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  RELEASE.md  pyproject.toml
examples/sample_project/: README.md
examples/sample_project/src/: __init__.py  auth.py  models.py  validators.py
examples/sample_project/tests/: test_auth.py  test_models.py  test_validators.py
pytest_depper/: __init__.py  analyzer.py  cli.py  git_utils.py  plugin.py
